[package]
name = "oxideav-prores"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-prores"
authors = ["Mark Karpeles"]
description = "Pure-Rust Apple ProRes codec — scaffold (decoder + encoder not yet implemented)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-prores"
keywords = ["multimedia", "video", "prores", "apple", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.0"
oxideav-codec = "0.0"
