[package]
name = "oxideav-prores"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-prores"
authors = ["Mark Karpeles"]
description = "Pure-Rust Apple ProRes codec — decoder + encoder for 422 Proxy/LT/Standard/HQ and 4444 / 4444 XQ"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-prores"
keywords = ["multimedia", "video", "prores", "apple", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
